<resources>
    <string name="app_name">NixieClock</string>
    <string name="action_settings">Settings</string>
    <string name="menu_fragment_label">Menu Fragment</string>

    <string name="top_app_bar_title">Nixie clock</string>
    <string name="top_app_bar_add">Add</string>
    <string name="top_app_bar_add_search_content_description">Add</string>
    <string name="top_app_bar_more">More</string>
    <string name="top_app_bar_more_content_description">More</string>
    <string name="top_app_bar_edit">Edit</string>
    <string name="top_app_bar_edit_content_description">Edit</string>
    <string name="bottom_app_bar_single">Single</string>
    <string name="bottom_app_bar_single_content_description">Single Alarms</string>
    <string name="bottom_app_bar_weekly">Weekly</string>
    <string name="bottom_app_bar_weekly_content_description">Weekly Alarms</string>
    <string name="bottom_app_bar_yearly">Yearly</string>
    <string name="bottom_app_bar_yearly_content_description">Yearly Alarms</string>
    <string name="timeInputError">Wrong format: HH:MM</string>
    <string name="allTextViewString">All</string>
    <string name="singleButtonString">Single</string>
    <string name="weeklyButtonString">Weekly</string>
    <string name="monthlyButtonString">Monthly</string>
    <string name="yearlyButtonString">Yearly</string>
    <string name="deleteButtonString">Delete</string>
    <string name="cancelButtonString">Cancel</string>
    <string name="timeHintString">Time</string>
    <string name="timeString">06:00</string>
    <string name="mondayCheckBoxString">Mon</string>
    <string name="tuesdayCheckBoxString">Tue</string>
    <string name="wednesdayCheckBoxString">Wed</string>
    <string name="thursdayCheckBoxString">Thu</string>
    <string name="fridayCheckBoxString">Fri</string>
    <string name="saturdayCheckBoxString">Sat</string>
    <string name="sundayCheckBoxString">Sun</string>
    <string name="descriptionHintString">Description</string>
    <string name="repeatModeString">Repeat mode</string>
    <string name="oneTimeButton">Single</string>
    <string name="alarmSoundString">Alarm sound</string>
    <string name="defaultRingtoneString">Default ringtone</string>
    <string name="lowVolumeDescriptionString">Low Volume</string>
    <string name="highVolumeDescriptionString">High Volume</string>
    <string name="risingSoundLevelString">Rising sound level</string>
    <string name="napEnableString">Nap enable</string>
    <string name="saveString">Save</string>
    <string name="cancelString">Cancel</string>
    <string name="napString">Nap</string>
    <string name="napStateString">Disabled</string>
    <string name="alarm_fragment_label">Alarm Fragment</string>
    <string name="wifi_fragment_label">Wifi Fragment</string>
</resources>