<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity"
    android:id="@+id/menuFragment">

    <RelativeLayout
        android:id="@+id/selectAllLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topAppBarLayout"
        android:layout_marginLeft="25dp"
        android:visibility="gone"
        tools:ignore="RtlHardcoded">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/allText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allTextViewString"
            android:layout_centerHorizontal="true"/>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/selectAllCheckBox"
            android:layout_width="30dp"
            android:layout_height="45dp"
            android:layout_below="@+id/allText"/>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/selectionMenu"
        android:layout_below="@+id/selectAllLayout"
        android:id="@+id/AlarmRecView"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="10dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="Menu"
            android:textColor="@color/orange"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:iconSize="50dp"
            app:iconGravity="textStart"
            style="@style/Widget.Material3.Button.IconButton"
            app:icon="@drawable/ic_add_menu"
            app:iconTint="@color/orange"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bluetoothButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintEnd_toStartOf="@+id/addButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/Widget.Material3.Button.IconButton"
            app:icon="@drawable/ic_bluetooth_disconnected"
            app:iconGravity="textStart"
            app:iconSize="30dp"
            app:iconTint="@color/sundayRed"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/wifiButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintEnd_toStartOf="@+id/bluetoothButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/Widget.Material3.Button.IconButton"
            app:icon="@drawable/ic_wifi_disconnected"
            app:iconGravity="textStart"
            app:iconSize="35dp"
            app:iconTint="@color/sundayRed"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/selectionMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="visible">

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/chooseFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="15dp"
            app:singleSelection="true"
            app:selectionRequired="true"
            android:visibility="visible"
            app:checkedButton="@id/weeklyButton">

            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:id="@+id/singleButton"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/singleButtonString"
                android:textSize="11sp"
                android:textColor="@color/orange"/>

            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:id="@+id/weeklyButton"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:text="@string/weeklyButtonString"
                android:textSize="11sp"
                android:textColor="@color/orange"/>

            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:id="@+id/monthlyButton"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/monthlyButtonString"
                android:textSize="11sp"
                android:textColor="@color/orange"/>

            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:id="@+id/yearlyButton"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/yearlyButtonString"
                android:textSize="11sp"
                android:textColor="@color/orange"/>

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/deleteSelectionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/cancelSelectionButton"
            app:layout_constraintEnd_toStartOf="@+id/cancelSelectionButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:text="@string/deleteButtonString"
            android:textColor="@color/sundayRed"
            android:visibility="gone"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelSelectionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/deleteSelectionButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/deleteSelectionButton"
            app:layout_constraintTop_toTopOf="@+id/deleteSelectionButton"
            android:text="@string/cancelButtonString"
            android:visibility="gone"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="invisible" />

</RelativeLayout>